--- a/AngularApp/src/index.html
+++ b/AngularApp/src/index.html
@@ -11,6 +11,7 @@
       rel="stylesheet">
 </head>
 <body>
+  <!-- <script src="http://maps.googleapis.com/maps/api/js"></script> -->
   <app-root></app-root>
 </body>
 </html>
