--- a/AngularApp/src/index.html
+++ b/AngularApp/src/index.html
@@ -11,6 +11,19 @@
       rel="stylesheet">
 </head>
 <body>
+  <!-- <script src="https://www.gstatic.com/firebasejs/5.0.4/firebase.js"></script>
+  <script>
+  // Initialize Firebase
+  var config = {
+    apiKey: "AIzaSyDzOmASaIIJpYk_uAIVc3pv7BVjTZjhYvE",
+    authDomain: "designexpresstec.firebaseapp.com",
+    databaseURL: "https://designexpresstec.firebaseio.com",
+    projectId: "designexpresstec",
+    storageBucket: "designexpresstec.appspot.com",
+    messagingSenderId: "928849201023"
+  };
+  firebase.initializeApp(config);
+  </script> -->
   <app-root></app-root>
 </body>
 </html>
